Handle IOException in UiIntegrationSteps by returning false instead of throwing RuntimeException